--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==24.2.0
 certifi==2024.8.30
 cffi==1.17.1
 et-xmlfile==1.1.0
+exceptiongroup==1.2.2
 h11==0.14.0
 idna==3.10
 numpy==2.1.1
@@ -24,3 +25,4 @@ tzdata==2024.1
 urllib3==2.2.3
 websocket-client==1.8.0
 wsproto==1.2.0
+XlsxWriter==3.2.0
